--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "canvas-confetti": "^1.9.3",
     "lucide-react": "^0.468.0",
     "next": "15.0.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-pannellum": "^0.2.16",
     "replicate": "^1.0.1"
   },
   "devDependencies": {
