--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-pannellum": "^0.2.16",
-    "replicate": "^1.0.1"
+    "replicate": "^1.0.1",
+    "vercel": "^39.1.3"
   },
   "devDependencies": {
     "eslint": "^8",
